src/tui/widgets/snapshots/rmcl__tui__widgets__instances__tests__instances_list_renders_empty.snap
---
source: src/tui/widgets/instances.rs
expression: terminal.backend()
---
"╭Instances─────────────────────────────╮"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"╰──────────────────────────────────────╯"
